Added crime, sex offender, neighborhood analysis and usage from the door profit api. Added chat bot to bottom of mortgage section for follow up on what the user needs to consider prior to closing.

--- a/disaster/legends/earthquake_legend.html
+++ b/disaster/legends/earthquake_legend.html
@@ -1,7 +1,11 @@
-<div style="
-    position: fixed;
-    bottom: 35px;
-    left: 35px;
+<div class="dp-legend" style="
+    position: fixed !important;
+    bottom: 35px !important;
+    left: 35px !important;
+    right: auto !important;
+    top: auto !important;
+    transform: none !important;
+    margin: 0 !important;
     z-index: 9999;
     background: white;
     padding: 10px 14px;
