--- a/disaster/legends/wind_legend.html
+++ b/disaster/legends/wind_legend.html
@@ -1,14 +1,19 @@
-<div class="leaflet-bottom leaflet-left">
-  <div class="leaflet-control leaflet-bar" style="
-      background: white;
-      padding: 10px 14px;
-      border-radius: 6px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
-      font-size: 13px;
-      max-width: 220px;
-      margin-bottom: 20px;
-      margin-left: 20px;
-  ">
+<div class="dp-legend" style="
+    position: fixed !important;
+    bottom: 35px !important;
+    left: 35px !important;
+    right: auto !important;
+    top: auto !important;
+    transform: none !important;
+    margin: 0 !important;
+    z-index: 9999;
+    background: white;
+    padding: 10px 14px;
+    border-radius: 6px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+    font-size: 13px;
+    max-width: 220px;
+">
     <b>Wind / Hurricane Layers</b><br>
     <span style="font-size:11px;color:#555;margin-bottom:8px;display:block;">
         Toggle layers in map control (top right)
@@ -16,20 +21,24 @@
     {swath_section}
     {track_section}
     {tornado_section}
-  </div>
 </div>
 
-<div class="leaflet-top leaflet-right">
-  <div class="leaflet-control leaflet-bar" style="
-      background: white;
-      padding: 8px 12px;
-      border-radius: 6px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
-      font-size: 12px;
-      max-width: 320px;
-      margin-top: 20px;
-      margin-right: 20px;
-  ">
+<div class="dp-legend" style="
+    position: fixed !important;
+    top: 35px !important;
+    right: 35px !important;
+    left: auto !important;
+    bottom: auto !important;
+    transform: none !important;
+    margin: 0 !important;
+    z-index: 9999;
+    background: white;
+    padding: 8px 12px;
+    border-radius: 6px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+    font-size: 12px;
+    max-width: 320px;
+">
     <details open>
       <summary style="cursor:pointer;font-weight:600;">Wind Event IDs</summary>
       <div style="font-size:11px;color:#555;margin:4px 0 6px;">
@@ -39,5 +48,4 @@
         {wind_event_section}
       </div>
     </details>
-  </div>
 </div>
